@@ -79,6 +79,23 @@ const run = async (): Promise<void> => {
   {
     const outDir = mkTmp();
     const input = path.join(process.cwd(), "tests", "fixtures", "intake", "tampered_manifest", "tampered.zip");
+    const res = await runCliCapture([
+      "safe-run",
+      input,
+      "--out",
+      outDir,
+      "--adapter",
+      "none",
+      "--enable-plugin",
+      "unknown_plugin_name",
+    ]);
+    assertEq(res.status, 40, "safe-run should fail closed for unknown plugin even when adapter is none");
+    assert(res.stderr.includes("ADAPTER_PLUGIN_UNKNOWN"), "expected ADAPTER_PLUGIN_UNKNOWN on stderr for adapter none");
+  }
+
+  {
+    const outDir = mkTmp();
+    const input = path.join(process.cwd(), "tests", "fixtures", "intake", "tampered_manifest", "tampered.zip");
     const res = await runCliCapture(["safe-run", input, "--out", outDir, "--adapter", "archive", "--enable-plugin"]);
     assertEq(res.status, 40, "safe-run should fail closed when --enable-plugin value is missing");
     assert(res.stderr.includes("INPUT_INVALID"), "expected INPUT_INVALID on stderr");
